--- a/MySearchApp/Base.lproj/Main.storyboard
+++ b/MySearchApp/Base.lproj/Main.storyboard
@@ -1,24 +1,143 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="6Y1-nA-d9g">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Table View Controller-->
+        <scene sceneID="sSW-nc-RmQ">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <tableViewController id="RfF-Qu-f3Z" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="120" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="TYc-z9-7N5">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <searchBar key="tableHeaderView" contentMode="redraw" placeholder="検索キーワードを入力してください" id="eZY-rI-hHZ">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <textInputTraits key="textInputTraits"/>
+                            <connections>
+                                <outlet property="delegate" destination="RfF-Qu-f3Z" id="LoX-ju-Fiv"/>
+                            </connections>
+                        </searchBar>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="itemCell" id="fWz-Lk-NyK">
+                                <rect key="frame" x="0.0" y="72" width="375" height="120"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="fWz-Lk-NyK" id="4Y9-9M-HcY">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="119.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7HW-bk-qyH">
+                                            <rect key="frame" x="10" y="10" width="100" height="100"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="100" id="6lk-i4-ncW"/>
+                                                <constraint firstAttribute="height" constant="100" id="fD5-Yb-EUK"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="商品名" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ol5-77-3Im">
+                                            <rect key="frame" x="118" y="10" width="247" height="78"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="価格" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2mJ-Q6-gA3">
+                                            <rect key="frame" x="118" y="88" width="247" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="21" id="bE3-AG-FF6"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="Ol5-77-3Im" firstAttribute="top" secondItem="7HW-bk-qyH" secondAttribute="top" id="4bE-ed-LB6"/>
+                                        <constraint firstAttribute="trailing" secondItem="2mJ-Q6-gA3" secondAttribute="trailing" constant="10" id="4gp-Ff-Kz8"/>
+                                        <constraint firstItem="2mJ-Q6-gA3" firstAttribute="leading" secondItem="7HW-bk-qyH" secondAttribute="trailing" constant="8" id="BZc-P0-xu7"/>
+                                        <constraint firstAttribute="trailing" secondItem="2mJ-Q6-gA3" secondAttribute="trailing" constant="10" id="OPb-yH-Pzu"/>
+                                        <constraint firstItem="2mJ-Q6-gA3" firstAttribute="trailing" secondItem="Ol5-77-3Im" secondAttribute="trailing" id="PP0-py-0KF"/>
+                                        <constraint firstItem="7HW-bk-qyH" firstAttribute="leading" secondItem="4Y9-9M-HcY" secondAttribute="leading" constant="10" id="PvR-YS-iCF"/>
+                                        <constraint firstItem="2mJ-Q6-gA3" firstAttribute="leading" secondItem="Ol5-77-3Im" secondAttribute="leading" id="ghG-hO-7o0"/>
+                                        <constraint firstItem="7HW-bk-qyH" firstAttribute="top" secondItem="4Y9-9M-HcY" secondAttribute="top" constant="10" id="iuM-XY-e4l"/>
+                                        <constraint firstAttribute="bottom" secondItem="2mJ-Q6-gA3" secondAttribute="bottom" constant="10" id="uz1-hz-Fhr"/>
+                                        <constraint firstItem="2mJ-Q6-gA3" firstAttribute="top" secondItem="Ol5-77-3Im" secondAttribute="bottom" id="zwE-YV-ie2"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="ZfO-Bn-acV" kind="show" id="NcI-6d-1ch"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="RfF-Qu-f3Z" id="9M0-qg-KiA"/>
+                            <outlet property="delegate" destination="RfF-Qu-f3Z" id="75V-XR-ov2"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="fdg-Nb-gYF"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DN8-nR-zv3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="647.20000000000005" y="128.18590704647679"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="XYt-b0-xM2">
+            <objects>
+                <viewController id="ZfO-Bn-acV" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="8d6-MG-crb">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QZj-hm-LRm">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <wkWebViewConfiguration key="configuration">
+                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
+                                    <wkPreferences key="preferences"/>
+                                </wkWebViewConfiguration>
+                            </wkWebView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="QZj-hm-LRm" firstAttribute="top" secondItem="vcR-oM-NDI" secondAttribute="top" id="1OL-bH-sfg"/>
+                            <constraint firstItem="QZj-hm-LRm" firstAttribute="leading" secondItem="vcR-oM-NDI" secondAttribute="leading" id="AX7-M6-ViU"/>
+                            <constraint firstItem="vcR-oM-NDI" firstAttribute="trailing" secondItem="QZj-hm-LRm" secondAttribute="trailing" id="RgL-NZ-pZ8"/>
+                            <constraint firstItem="QZj-hm-LRm" firstAttribute="bottom" secondItem="vcR-oM-NDI" secondAttribute="bottom" id="Xz1-kG-hIg"/>
+                            <constraint firstItem="QZj-hm-LRm" firstAttribute="trailing" secondItem="vcR-oM-NDI" secondAttribute="trailing" id="YOU-V6-lxO"/>
+                            <constraint firstItem="QZj-hm-LRm" firstAttribute="leading" secondItem="vcR-oM-NDI" secondAttribute="leading" id="eeE-L6-duH"/>
+                            <constraint firstItem="vcR-oM-NDI" firstAttribute="bottom" secondItem="QZj-hm-LRm" secondAttribute="bottom" id="nz2-Fp-Q9w"/>
+                            <constraint firstItem="QZj-hm-LRm" firstAttribute="top" secondItem="vcR-oM-NDI" secondAttribute="top" id="qgQ-0U-FgQ"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="vcR-oM-NDI"/>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VtC-8T-PxA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1335" y="124"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="FQg-le-3an">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="6Y1-nA-d9g" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="4wW-oq-cvb">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="RfF-Qu-f3Z" kind="relationship" relationship="rootViewController" id="oMn-x5-KwY"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bQP-YQ-nW5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-292" y="128.18590704647679"/>
         </scene>
     </scenes>
 </document>
